# OptionPricer

./: .gitignore  .pypirc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
optionpricer/: __init__.py  cli.py  core.py  exceptions.py  pyproject.toml  simd.py  telemetry.py
optionpricer.egg-info/: PKG-INFO  SOURCES.txt
optionpricer/analytics/: greeks.py  implied_vol.py  risk.py  surface.py  term_structure.py  vanna_volga.py  volatility.py
optionpricer/api/: pricer.proto  pricer_pb2.py  pricer_pb2_grpc.py  server.py
optionpricer/models/: _binomial_cy.c  _binomial_cy.pyx  _fdm_cy.c  _fdm_cy.pyx  barrier_analytical.py  bates.py  binomial.py  bjerksund_stensland.py  black_scholes.py  fdm.py  fft_pricing.py  heston.py  jump_diffusion.py  monte_carlo.py  multi_asset.py  quanto.py
scripts/: verify_release_version.py
tests/: __init__.py  bench_v2.py  test_bench_smoke.py  test_models.py
