[build-system]
requires = ["setuptools>=61.0", "cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "optionpricer"
version = "0.1.6"
description = "A high-performance, professional-grade (i tried) quantitative option pricing library with Numba and Cython optimizations."
readme = "README.md"
authors = [{name = "Palash"}]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "numba",
]

[project.optional-dependencies]
fast = ["py_lets_be_rational"]
