[build-system]
requires = ["setuptools>=61.0", "cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "optionpricer"
version = "0.2.0"
description = "High-performance quantitative option pricing with Cython, Numba, and stochastic volatility models."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Palash"}]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "pydantic>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
fast = ["py_lets_be_rational"]
dev = ["pytest", "psutil", "memory_profiler"]

[project.urls]
Repository = "https://github.com/palash/optionpricer"
Changelog = "https://github.com/palash/optionpricer/blob/main/CHANGELOG.md"
