[build-system]
requires = ["setuptools>=61.0", "cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "optionpricer"
version = "0.2.3"
description = "High-performance quantitative option pricing with Cython, Numba, and stochastic volatility models."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Palash"}]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "pydantic>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
fast = ["py_lets_be_rational"]
dev = ["pytest", "psutil", "memory_profiler", "build", "twine"]

[project.urls]
Homepage = "https://github.com/frostbyte8909/OptionPricer"
Documentation = "https://github.com/frostbyte8909/OptionPricer#readme"
Repository = "https://github.com/frostbyte8909/OptionPricer"
Changelog = "https://github.com/frostbyte8909/OptionPricer/blob/main/CHANGELOG.md"
Issues = "https://github.com/frostbyte8909/OptionPricer/issues"

[tool.pytest.ini_options]
markers = [
    "bench_smoke: fast benchmark smoke (optional grouping)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
